$Header$
===============================================================

174	Luke Howard <lukeh@padl.com>

	* added patches from Maxim Batourine for compiling
	  with Sun workshop compiler
	* added notes re: 64-bit compile on Solaris from
	  above source

173	Luke Howard <lukeh@padl.com>

	* notes on IRS in doc/README.IRS
	* added irs.h for AIX compat
	* patch from Bob Guo for stripping trailing
	  spaces in ldap.conf.

172	Luke Howard <lukeh@padl.com>

	* fixed schema mapping bug by storing a copy of the
	  mapped schema in the Berkeley DB rather than the
	  element itself. Because the DB library returns
	  static storage, this was causing problems where
	  the schema mapping calls were used to build the
	  attribute table in ldap-schema.c. This bugfix was
	  sponsored by n2h2.com; thanks!

171	Luke Howard <lukeh@padl.com>

	* added ldap.conf stanza for AIX
	* workaround for schema mapping bug.

170	Luke Howard <lukeh@padl.com>

	* use _nss_ldap_getrdnvalue() for determining canonical	
	  group name

169	Luke Howard <lukeh@padl.com>

	* fixed typo in ldap-service.c; prefix filters now
	  with _nss_ldap

168	Luke Howard <lukeh@padl.com>

	* initialize old_handler to SIG_DFL
	* incorporate Stephan Cremer's mapping patches,
	  a big thanks to Stephan for these!
	* use LDAP_OPT_NETWORK_TIMEOUT if available for
	  network connect timeout
	* removed hard-coded schema mapping for 
	  authPassword, NDS and MSSFU

167	Luke Howard <lukeh@padl.com>

	* support for new OpenLDAP rebind proc prototype
	* in rebind function, respect timeout
	* fix for PADL Release Control

166	Luke Howard <lukeh@padl.com>

	* corrected small typos 

165	Luke Howard <lukeh@padl.com>

	* posixMember is a distinguished name, don't pretend it
	  is a login name
	* cleaned up code referencing different member syntaxes

164	Luke Howard <lukeh@padl.com>

	* removed IDS_UID code, never worked properly

163	Luke Howard <lukeh@padl.com>

	* removed context_free function, usage confusing
