@@ -20,6 +20,7 @@ and ideas to make this software available.
 	Emile Heitor <eheitor@isdnet.net>
 	Szymon Juraszczyk <szymon@ssk.pl>
 	Anselm Kruis <kruis@till-photonics.com>
+	Steve Langasek <vorlon@netexpress.net>
 	Joe Little <jlittle@open-it.org>
 	Phillip Liu <phillip@loudcloud.com>
 	Jeff Mandel <jeff.mandel@probes.com>
