@@ -61,8 +61,12 @@ NSS_STATUS _nss_ldap_dn2uid (LDAP * ld,
 #define NSS_LDAP_KEY_PORT		"port"
 #define NSS_LDAP_KEY_BINDDN		"binddn"
 #define NSS_LDAP_KEY_BINDPW   		"bindpw"
+#define	NSS_LDAP_KEY_USESASL		"use_sasl"
+#define	NSS_LDAP_KEY_SASLID		"sasl_auth_id"
 #define NSS_LDAP_KEY_DEREF    		"deref"
 #define NSS_LDAP_KEY_ROOTBINDDN		"rootbinddn"
+#define	NSS_LDAP_KEY_ROOTUSESASL	"rootuse_sasl"
+#define	NSS_LDAP_KEY_ROOTSASLID		"rootsasl_auth_id"
 #define NSS_LDAP_KEY_LDAP_VERSION	"ldap_version"
 #define NSS_LDAP_KEY_TIMELIMIT		"timelimit"
 #define NSS_LDAP_KEY_BIND_TIMELIMIT	"bind_timelimit"
